# Nextflow_Study

./: .gitignore  LICENSE  README.md  UV_GUIDE.md  generate_uv_locks.sh  requirements.txt
RNA_seq/: PIPELINE_SUMMARY.md  QUICKSTART.md  README.md  RNAseq.nf  deseq2_analysis.R  install_dependencies.sh  main.nf  nextflow.config  pyproject.toml  sample_metadata.csv
RNA_seq/conf/: arm.config  base.config  igenomes.config  igenomes_ignored.config
RNA_seq/container/RNA_seq/: .dockerignore  DOCKER_BUILD_GUIDE.md  build_docker_manually.sh
RNA_seq/docs/: NEXTFLOW_STANDARDS.md
RNA_seq/modules/local/deseq2_qc/: enviroment.yml  main.nf
RNA_seq/modules/nf-core/Trim - galore/: main.nf  meta.yml
RNA_seq/modules/nf-core/fastqc/: environment.yml  main.nf
RNA_seq/modules/nf-core/gffread/: environment.yml  main.nf
RNA_seq/modules/nf-core/multiqc/: environment.yml  main.nf
RNA_seq/modules/nf-core/stats/: environment.yml  main.nf
RNA_seq/modules/nf-core/untar/: main.nf
scRNAseq/: PIPELINE_SUMMARY.md  QUICKSTART.md  README.md  analyze_scrna.py  install_dependencies.sh  nextflow.config  pyproject.toml  requirements.txt  sample_sheet.csv  scRNAseq.nf
