[project]
name = "scrna-seq-pipeline"
version = "1.0.0"
description = "Nextflow pipeline for single-cell RNA-seq data analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bioinformatics", "single-cell", "RNA-seq", "scRNA-seq", "nextflow", "scanpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scipy>=1.7.0",
    
    # Single-cell analysis
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "leidenalg>=0.9.0",
    "python-igraph>=0.10.0",
    
    # kallisto|bustools
    "kb-python>=0.27.0",
    
    # Visualization
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    
    # Quality control
    "multiqc>=1.12",
    "pysam>=0.19.0",
    
    # Utilities
    "h5py>=3.6.0",
    "tables>=3.7.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "numba>=0.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]

# Batch effect correction
batch = [
    "harmonypy>=0.0.6",
    "scvi-tools>=0.19.0",
    "bbknn>=1.5.0",
]

# Trajectory analysis
trajectory = [
    "scvelo>=0.2.4",
    "cellrank>=1.5.0",
]

# Cell type annotation
annotation = [
    "celltypist>=1.3.0",
]

# Gene set enrichment
enrichment = [
    "gseapy>=1.0.0",
    "decoupler>=1.4.0",
]

# Cell-cell communication
communication = [
    "liana>=0.1.0",
]

# R integration
r-integration = [
    "anndata2ri>=1.1.0",
    "rpy2>=3.5.0",
]

# Jupyter notebooks
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]

# All optional dependencies
full = [
    "scrna-seq-pipeline[dev,batch,trajectory,annotation,enrichment,communication,r-integration,notebook]",
]

[project.urls]
Homepage = "https://github.com/yourusername/scrna-seq-pipeline"
Repository = "https://github.com/yourusername/scrna-seq-pipeline"
Documentation = "https://github.com/yourusername/scrna-seq-pipeline/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
